@@ -1,0 +1,4 @@
+data.raw.technology["statistics-combinator"] = nil
+
+table.insert(data.raw.technology["advanced-combinators"].effects, {type = "unlock-recipe", recipe = "production-combinator"})
+table.insert(data.raw.technology["advanced-combinators"].effects, {type = "unlock-recipe", recipe = "consumption-combinator"})
